# ConfidenceCoach

./: PROPOSAL.md  README.md  TECHNICAL_SPEC.md  pyproject.toml
src/confidencecoach/: cli.py
tests/: test_cli.py
